# learnOpencv

./: README.md
code1_1/: CMakeLists.txt  code1_1.kdev4  main.cpp
code1_1/.kdev4/: code1_1.kdev4
